fix (style): Prevent floated images from being covered by text

--- a/app/scss/_miscellaneous.scss
+++ b/app/scss/_miscellaneous.scss
@@ -45,7 +45,7 @@
 .figure-floated {
   margin: 1em 2em 1em 0;
   text-align: center;
-  max-width: 30%;
+  min-width: 20%;
 }
 
 .heading {
